better portfolio structure

--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -97,14 +97,20 @@
             </div>
           </div>
           <div class="col-md-7 pb-5 mr-auto">
-            <p>For a year and I half I worked as the designer for the Visual Art Department at UBC. In my last six months I was asked to migrate their training and safety information online, so I took this opportunity to take a user-centered approach and redesign the entire website, as well as how this information connected with the physical facilities.</p>
+          	<h5>What...</h5>
+            <p>For a year and a half I worked as the designer for the Visual Art Department at UBC. In my last six months I led a user-centered design of a new student-oriented corner of their website.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/ahvahub/01.jpg" alt="Image" class="img-fluid">
+              <img src="images/ahvahub/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>Conceptually and practically restructuring the website,</br>while retaining the brand look-and-feel</p>
             </div>
 
-            <p>I began by talking to all the stakeholders involved: from students, to instructors, to facility technicians, and finally administrators. From there, I began to lay out a conceptual design of their website that could satisfy these diverse user requirements. Based on these requirements, I generated several early prototypes, starting with paper, and moving to simplified websites, which I could present and discussed with different user groups.</p>
+            <h5>Why...</h5>
+            <p>This project came about because I was asked to support a project manager in migrating training and safety information online. I took this opportunity to introduce a user-centered design approach and create an entirely new website. This also addressed questions around how this information connected with the physical facilities.</p>
+
+            <h5>How...</h5>
+
+            <p>The process began with listening to all the stakeholders, and finding their needs and expectations: from students, to instructors, to facility technicians, and finally administrators. With these in mind, I began to lay out a conceptual design of this new website that encompassed these diverse user requirements. These requirements led to early prototypes, starting with paper, and moving to simplified websites, which I could present and discussed with different user groups.</p>
 
             <p>This new website introduced new considerations about connecting digital safety information with specific physical locations. To link these two, I introduced QR codes and new design guides (and templates) for using QR code stickers to put information exactly where it was needed. They have since expanded their use of QR codes, not least for COVID-19 occupany restrictions.</p>
 
@@ -113,7 +119,9 @@
               <p>Developing QR code templates to connect digital safety and training information with physical spaces.</p>
             </div>
 
-            <p>In this design role, I also was in charge of developing and maintaining content across web and social media. I created original graphic and typography designs for special events and other promotions. I also acted as a photographer, documneting artworks in exhibitions, and event photography for art opening and other special events.</p>
+            <h5>More...</h5>
+
+            <p>I was also in charge of developing and maintaining content across web and social media in this designer role. I created original graphic and typography designs for special events and other promotions. I also acted as a photographer – documenting artworks in exhibitions, and shooting event photography for exhibition openings and other special events.</p>
           </div>
         </div>
       </div>
