--- a/about/ck12.html
+++ b/about/ck12.html
@@ -94,24 +94,25 @@
             </div>
           </div>
           <div class="col-md-7 pb-5 mr-auto">
-            <p>I began working at the <a href="https://www.ck12.org/student/" target="blank">Ck-12 Foundation</a> as a design intern after highschool, then continued there as a designer and illustrator when their in-house designer left.</p>
+            <h5>What...</h5>
+            <p>I worked at the <a href="https://www.ck12.org/student/" target="blank">Ck-12 Foundation</a> for several years, as a design intern, then a designer and illustrator, and finally on a contract basis. I worked on graphic designs and illustrations for a range of their digital education products, built and tested iOS and website designs, and supported the initial release of their PLIX tool.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/ck12/02.jpg" alt="Image" class="img-fluid">
+              <img src="images/ck12/02.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>Sketching interactions to communicate new ideas for their web e-book builder.</p>
             </div>
 
-            <p>I began developing website and app prototypes for the executive team, then started illustrating their textbooks, especially those in science and math. With one other design intern, I created the concept and template for a new "Study Guide" product they wanted to offer.</p>
+            <p>I began developing website and app prototypes for the executive team, then started illustrating their textbooks – especially those in science and math. Working with an engineering intern, I designed and prototyped a content delivery and quiz app for iOS. I also helped to develop the concept and template for a new "Study Guide" feature they added to their middle school products.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/ck12/01.jpg" alt="Image" class="img-fluid">
+              <img src="images/ck12/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>"Ck-12 Guides" template.</p>
             </div>
 
-            <p>Later they introduced a new tool for science teachers to build their own interactive science questions ("PLIXes"), and a library of pre-built questions. I helped to populate their new library, and in the process helped to refine and debug these tools, and investigate what functions were necessary, were missing, or weren't needed.</p>
+            <p>Later they introduced a tool for science teachers to build their own interactive science questions ("PLIXes"), and a library of pre-built questions. I helped to polish this tool, tracking bugs, and liaising between developers and science teachers. Through this process I helped to populate the library with pre-built questions, refine the tool, and investigate what functions were critical, were missing, or weren't needed for the first release.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/ck12/04.jpg" alt="Image" class="img-fluid">
+              <img src="images/ck12/04.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>An early version of the "PLIX" tool I helped to conduct usability testing on.</p>
             </div>
           </div>
