--- a/about/meethalfway.html
+++ b/about/meethalfway.html
@@ -97,25 +97,30 @@
             </div>
           </div>
           <div class="col-md-7 pb-5 mr-auto">
-            <p>In a team of four designers, we developed a prototype mobile, map application to facilitate meetups. We developed the concept and designs over the course of a week-long intensive design bootcamp at the Université Paris-Saclay.</p>
+          	<h5>What...</h5>
+            <p>With a team of four designers, we developed a prototype mobile-based map application to facilitate collaborative geo-navigation and geo-located meetups. The concept was developed over the course of a week-long intensive design bootcamp at the Université Paris-Saclay.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/meethalfway/01.jpg" alt="Image" class="img-fluid">
+              <img src="images/meethalfway/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>The team of four UX designers experimenting with gesture-based interactions.</p>
             </div>
 
-            <p>The process began with gathering interviews from a variety of users of maps, which were condensed into a set of breakdowns, from which we began to generate design ideas and features. Based on this interview data, we brainstormed a variety of initial concepts (<a href="images/meethalfway/video_brainstorm.mp4" target="blank">video brainstorm</a>), which we prototyped at various fidelities, tested with users, then iterated on.</p>
+            <h5>Why...</h5>
+            <p>We conducted two rounds of interviews, collecting user stories which we condensed into to a list of design problems using a breakdown analysis. Collaborative issues were a common feature of these stories, and offered an exciting direction for design intervention.</p>
+
+            <h5>How...</h5>
+            <p>The process began with this interview stage, which led us to collaborative navigation and geo-location. Based on this idea, we brainstormed a variety of initial concepts (<a href="images/meethalfway/video_brainstorm.mp4" target="blank">video brainstorm</a>), which we prototyped at various fidelities, tested with users, and iterated upon.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/meethalfway/04.jpg" alt="Image" class="img-fluid">
-              <p>Reviewing and organizing ideas from a video brainstorming session.</p>
+              <img src="images/meethalfway/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>The conceptual, and the visual designs of our prototype.</p>
             </div>
 
-            <p>The product of this work was a set of findings, design guidelines, and several novel interactions for map applciations, which we demonstrated in a video prototype, which we analyzed through a breakdown analysis. We presented our work to the other teams participating in the design bootcamp, as well as some visiting designers and professors.</p>
+            <p>The product of this work was a set of findings, design guidelines, and several novel interactions for map applciations, which we demonstrated in a <a href="images/meethalfway/video_prototype.mov" target="blank">video prototype</a>, which we analyzed through a breakdown analysis. We presented our work to the other teams participating in the design bootcamp, as well as some visiting designers and professors.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/meethalfway/03.jpg" alt="Image" class="img-fluid">
-              <p>The storyboard for a video prototype to demonstrate several key interactions.</p>
+              <img src="images/meethalfway/03.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>The video prototype storyboard, demonstrating several key interactions.</p>
             </div>
           </div>
         </div>
@@ -137,10 +142,10 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
-              <img src="images/meethalfway/05.jpg" alt="Image" class="img-fluid">
+              <img src="images/meethalfway/04.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
-              <p>A conceptual and visual design diagram of the features of our prototype.</p>
+              <p>Reviewing and organizing ideas from a video brainstorming session.</p>
             </div>
           </div>
 
