--- a/about/technofidgets.html
+++ b/about/technofidgets.html
@@ -97,27 +97,39 @@
             </div>
           </div>
           <div class="col-md-7 pb-5 mr-auto">
-            <p>At INRIA, I was offered a research position to complete my Master of Science in human-computer interaction studying creativity and creativity support tools.</p>
+          	<h5>What...</h5>
+            <p>At <a href="https://www.inria.fr/en" target="blank">INRIA Paris</a>, I was offered a research position to complete my Master of Science in human-computer interaction, in their interaction lab.</p>
 
-            <p>I conducted user-centered design research into creating technologies that support embodied creativity. This work explores the fundamentals of the creative process, the value of movement for focus and creativity, and how serendipity can become a design goal. I have been working with creative professionals to fundamentally understand their creative processes, and to test the design artifacts I have generated.</p>
+            <p>I conducted user-centered design research into technologies that support embodied creativity. This research led to the fabrication of three technology probes, which were tested with creatives in Paris.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/technofidgets/01.jpg" alt="Image" class="img-fluid">
-              <p>Annotated forms from early experiments in shape, using clay and salt dough.</p>
+              <img src="https://project.inria.fr/siliconvalley/files/2013/03/CRI_ROC.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>The INRIA research center just outside Paris.</p>
             </div>
+
+            <h5>Why...</h5>
+            <p>This work explored the fundamentals of the creative process, the value of movement for focus and creativity, and how serendipity can become a design goal. It was grounded in an intersection of the latest creativity research from neuroscience and psychology, with the existing HCI work on creativity and embodied tools. I used design to explore the gap between the new embodied nature of creativity in the former, and the focused, goal-oriented creativity of the latter.</p>
+
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/technofidgets/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>Annotated forms from early experiments in shape and tactile control.</p>
+            </div>
+
+            <h5>How...</h5>
+            <p>I worked with creative professionals to fundamentally understand their creative processes, and to explore, through design, how technologies could be created to better support their work.</p>
 
             <p>I began by collecting user stories from musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I analyzed and synthesized these stories into three key themes of the creative process of professionals: the signature toolbox, the mindfuck mindset, and manufactured obstacles. Based on these I led several brainstorming and ideation sessions with colleagues in the Paris lab. These led to a video prototype to test these ideas in situated interactions, and a design space for embodied creativity support tools.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/technofidgets/04.jpg" alt="Image" class="img-fluid">
+              <img src="images/technofidgets/04.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>Video brainstorming for productivity/fidget tools.</p>
             </div>
 
             <p>Guided by the dimensions of this space, I designed and fabricated three technology probes to explore the space. The DreamEasel, FidgiPen, and AirSampler were given to a write, an illustrator and a music producer respectively. Through collaborative use and redesign of the probes, I generated a refined deisgn space, and process for designing Creativity Support Tools for embodied creativity.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/technofidgets/02.jpg" alt="Image" class="img-fluid">
-              <p>The three technology probes, before being given to different creatives for testing.</p>
+              <img src="images/technofidgets/02.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>The three technology probes, prior to testing with different creatives.</p>
             </div>
 
             <p>This research is currently under review for submission to CHI 2021.</p>
