meethalfway figma image

--- a/about/meethalfway.html
+++ b/about/meethalfway.html
@@ -113,7 +113,12 @@
 
             <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/meethalfway/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
-              <p>The conceptual, and the visual designs of our prototype.</p>
+              <p>The conceptual design of the app, and a paper prototype..</p>
+            </div>
+
+            <div class="mb-4 text-center" data-aos="fade-up">
+              <img src="images/meethalfway/07.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>An interactive, medium fidelity UI prototype.</p>
             </div>
 
             <p>The product of this work was a set of findings, design guidelines, and several novel interactions for map applciations, which we demonstrated in a <a href="images/meethalfway/video_prototype.mov" target="blank">video prototype</a>, which we analyzed through a breakdown analysis. We presented our work to the other teams participating in the design bootcamp, as well as some visiting designers and professors.</p>
