--- a/about/index.html
+++ b/about/index.html
@@ -82,9 +82,9 @@
 					<img src="images/avatar.jpg" alt="Image" class="img-fluid">    
 				</div>
 				<div class="col-lg-8">
-					<h3 style="font-family: 'Courier', Courier, sans-serif; padding-bottom: 20px">Designer, artist, researcher</h3>
-					<p>I'm an artist, designer, and human-computer interaction researcher.</p>
-					<p>My passion is for building enabling technologies and exploring the intersection of human-behavior and technology.</p>
+					<h3 style="font-family: 'Courier', Courier, sans-serif; padding-bottom: 20px">Designer, researcher, artist</h3>
+					<p>I'm a digital artist, designer, and human-computer interaction researcher.</p>
+					<p>My passion is for building enabling technologies, and exploring the intersection of human-behavior and technology through design and making.</p>
 				</div>
 			</div>
 		</div>
