new ahva hub image

--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -108,8 +108,12 @@
             <h5>Why...</h5>
             <p>This project came about because I was asked to support a project manager in migrating training and safety information online. I took this opportunity to introduce a user-centered design approach and create an entirely new website. This also addressed questions around how this information connected with the physical facilities.</p>
 
-            <h5>How...</h5>
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/ahvahub/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>A new, student-oriented website, inspired by user stories</br>and an information architecture redesign.</p>
+            </div>
 
+            <h5>How...</h5>
             <p>The process began with listening to all the stakeholders, and finding their needs and expectations: from students, to instructors, to facility technicians, and finally administrators. With these in mind, I began to lay out a conceptual design of this new website that encompassed these diverse user requirements. These requirements led to early prototypes, starting with paper, and moving to simplified websites, which I could present and discussed with different user groups.</p>
 
             <p>This new website introduced new considerations about connecting digital safety information with specific physical locations. To link these two, I introduced QR codes and new design guides (and templates) for using QR code stickers to put information exactly where it was needed. They have since expanded their use of QR codes, not least for COVID-19 occupany restrictions.</p>
