--- a/about/blog.html
+++ b/about/blog.html
@@ -170,7 +170,7 @@
 				<div class="row mb-5">
 					<div class="col-md-12 text-center">
 						<h2 class="font-weight-bold text-black" style="font-family: 'Courier', Courier, sans-serif; padding-bottom: 20px">Get in touch</h2>
-						<p>Please feel free to add me on <a href="https://www.linkedin.com/in/zack-wilson-7bb02b80/">LinkedIn</a>, and to see my complete CV and employment history.</p>
+						<p>Please feel free to add me on <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a>, and to see my complete CV and employment history.</p>
 						<p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
 					</div>
 				</div>
