--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@
 									<div class="podcaster" style="line-height: 1.5">
 										<span class="d-block">Here are some of the projects</br>I've been working on lately.</span>
 									</br>
-									<span class="d-block">For my complete CV and experiences please visit my <a href="https://www.linkedin.com/in/zack-wilson-7bb02b80/" style="border-bottom: 2px dotted; padding-bottom: 0;">LinkedIn</a>.</span>
+									<span class="d-block">For my complete CV and experiences please visit my <a href="https://www.linkedin.com/in/zack-wilson/" style="border-bottom: 2px dotted; padding-bottom: 0;">LinkedIn</a>.</span>
 								</br>
 								<span class="d-block">Check out my <a href="blog.html" style="border-bottom: 2px dotted; padding-bottom: 0;">blog</a> for more experimental design and art projects.</span>
 							</div>
@@ -152,10 +152,23 @@
 			</div>
 		</div>
 	</div>
-</div>
 
-<div class="site-section">
-	<div class="container" data-aos="fade-up">
+	<div class="container" data-aos="fade-up" style="margin-top: 20px">
+		<div class="row mb-5">
+			<div class="col-md-12 text-center">
+				<h2 style="font-family: 'Courier', Courier, sans-serif;">More About Me</h2>
+			</div>
+			<div class="col-md-2"></div>
+			<div class="col-md-8 text-left">
+				<p>My interest and passion for design is driven by my curiosity for technology, how humans use and relate to it, and how our experiences are shaped and mediated by it.</p>
+				<p>In practice, my design philosophy, shaped by my experiences in labs and design teams, is to iterate quickly and make things – there is no better way to communicate a design, to test a design, to validate a design, than to make some type of prototype and try it out.</p>
+				<p>The designs I am most inspired by, and proud of, come out of taking the time to fundamentally understand a problem, clearly articulating it, and designing the simplest solution for that specific person or group. If you want a simple, standard website, bootstrap is free and easy to use – I am more interested in thinking critically about the entire human-experience with a product or service, and designing a solution that is simple, elegant, and maybe even surprising, and delightful to use.</p>
+			</div>
+			<div class="col-md-2"></div>
+		</div>
+	</div>
+
+	<div class="container" data-aos="fade-up" style="margin-top: 20px">
 		<div class="row mb-5">
 			<div class="col-md-12 text-center">
 				<h2 style="font-family: 'Courier', Courier, sans-serif;">More Design Stuff</h2>
@@ -173,7 +186,7 @@
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
 						<p class="mb-4">Creating diverse graphic designs and typography to promote events.</p>
 						<p>
-							<!-- <a href="single-post.html" class="text-white p-2">more ></a> -->
+							<a href="ahvahub.html" class="text-white p-2">more ></a>
 						</p>
 					</div>
 
@@ -189,7 +202,7 @@
 
 						<h2 class="mb-2 font-weight-light h4">Prototyping</h2>
 						<span class="d-block mb-2 text-white-opacity-05">Tippie</span>
-						<p class="mb-4">Interactive Figma prototype of a B2B2C app developed for Novopayments at the EIT Digital Finance Summer School.</p>
+						<p class="mb-4">Interactive Figma prototype of a B2B2C app developed for Novopayments at EIT Digital Budapest</p>
 						<p>
 							<!-- <a href="#" class="text-white p-2">more ></a> -->
 						</p>
@@ -223,11 +236,11 @@
 
 					<div class="text">
 
-						<h2 class="mb-2 font-weight-light h4">Game Graphics</h2>
+						<h2 class="mb-2 font-weight-light h4">Mobile Games</h2>
 						<span class="d-block mb-2 text-white-opacity-05">EIT VoiceArcade</span>
-						<p class="mb-4">Creating game assets for a voice-controlled videogame arcade.</p>
+						<p class="mb-4">Creating game assets (and prototyping) for a voice-controlled arcade.</p>
 						<p>
-							<!-- <a href="#" class="text-white p-2">more ></a> -->
+							<a href="https://github.com/BRomans/EIT_voice_arcade" class="text-white p-2">more ></a>
 						</p>
 					</div>
 
@@ -261,9 +274,9 @@
 
 						<h2 class="mb-2 font-weight-light h4">Photography</h2>
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
-						<p class="mb-4">Media production for the art department, including studio and event photography, plus bulk image processing.</p>
+						<p class="mb-4">Media production, studio and event photography, and bulk image management.</p>
 						<p>
-							<!-- <a href="#" class="text-white p-2">more ></a> -->
+							<a href="ahvahub.html" class="text-white p-2">more ></a>
 						</p>
 					</div>
 
@@ -277,7 +290,7 @@
 
 					<div class="text">
 
-						<h2 class="mb-2 font-weight-light h4">Robo-Sculpture</h2>
+						<h2 class="mb-2 font-weight-light h4">Robotics</h2>
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
 						<p class="mb-4">Exploring human-computer relationships through robotic art installations.</p>
 						<p>
@@ -315,7 +328,7 @@
 		<div class="row mb-5">
 			<div class="col-md-12 text-center">
 				<h2 class="font-weight-bold text-black" style="font-family: 'Courier', Courier, sans-serif; padding-bottom: 20px">Get in touch</h2>
-				<p>Please feel free to add me on <a href="https://www.linkedin.com/in/zack-wilson-7bb02b80/">LinkedIn</a>, and to see my complete CV and employment history.</p>
+				<p>Please feel free to add me on <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a>, and to see my complete CV and employment history.</p>
 				<p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
 			</div>
 		</div>
