--- a/about/index.html
+++ b/about/index.html
@@ -127,8 +127,8 @@
 					<div class="image" style="background-image: url('images/ahvahub/01.jpg');"></div>
 					<div class="text">
 
-						<h3 class="font-weight-light"><a href="ahvahub.html">A.H.V.A. Info Hub</a></h3>
-						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Leading a user-centered redesign of the information architecture and website for the U.B.C. fine art department.</small></span></div>
+						<h3 class="font-weight-light"><a href="ahvahub.html">Student Studio Safety Handbook</a></h3>
+						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A user-centered information architecture redesign to support studio safety and training for the U.B.C. fine art department.</small></span></div>
 					</div>
 				</div>
 
@@ -136,7 +136,7 @@
 					<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
 					<div class="text">
 
-						<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway</a></h3>
+						<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway.app</a></h3>
 						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A prototype mobile app to facilitate collaborative geo-navigation and meetups.</small></span></div>
 					</div>
 				</div>
@@ -146,7 +146,7 @@
 					<div class="text">
 
 						<h3 class="font-weight-light"><a href="ck12.html">Ck-12 Foundation</a></h3>
-						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Illustrating digital textbooks, designing web and mobile content delivery systems, and providing testing for beta-content tools.</small></span></div>
+						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Illustrating digital textbooks, designing web and mobile content delivery systems, and supporting the testing and release of other EduTech tools.</small></span></div>
 					</div>
 				</div>
 			</div>
