AHVA title update

--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -78,7 +78,7 @@
         <div class="row align-items-center">
           <div class="col-12 text-center">
             <a href="index.html">< Back</a>
-            <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Safety and Training</br>Information Hub</h1>
+            <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Student Studio Safety</h1>
           </div>
         </div>
       </div>
