--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -106,7 +106,7 @@
             </div>
 
             <h5>Why...</h5>
-            <p>This project came about because I was asked to support a project manager in migrating training and safety information online. I took this opportunity to introduce a user-centered design approach and create an entirely new website. This also addressed questions around how this information connected with the physical facilities.</p>
+            <p>This project came about because I was asked to support a project manager in migrating training and safety information online. I took this opportunity to introduce a user-centered design approach and create an entirely new website. This also raised questions around how this information connected with the physical facilities.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
               <img src="images/ahvahub/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
