--- a/about/wavemachine.html
+++ b/about/wavemachine.html
@@ -96,10 +96,10 @@
             </div>
           </div>
           <div class="col-md-7 pb-5 mr-auto">
-            <p>This project was a moving sculpture that made a wave in a sheet of fabric, that was an assemblage of pieces of a modular fabric design I created. It was exhibited in a design exhibition at GDP in Paris, and is now installed at the Ex)situ lab at INRIA Paris.</p>
+            <p>This project was a moving sculpture that made a wave in a sheet of fabric, that was an assemblage of pieces of a modular fabric design I created. It was exhibited in a design exhibition at GDP in Paris, and is now installed at the Ex)situ lab at INRIA Paris. [<a href="https://vimeo.com/481180091" target="blank">video</a>]</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/fabricwave/02.jpg" alt="Image" class="img-fluid">
+              <img src="images/fabricwave/02.jpg" alt="Image" class="img-fluid" width="80%">
               <p>The final sculpture displayed at the GDP office in Orsay, France.</p>
             </div>
 
@@ -116,7 +116,7 @@
             <p>While I learned a lot about the process of digital fabrication in this design project, there was very little design challenge as the possibilities were effectively limitless – it didn't have enough requirements to inspire innovation and creativity. This inspired me to focus on the exhibition instead. Very early I had the insight that an intriguing way to display fabric is to imply what is underneath using the shape – not unlike the snake that swallows an elephant and looks like a hat in the LIttle Prince.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/04.jpg" alt="Image" class="img-fluid">
+              <img src="images/fabricwave/04.jpg" alt="Image" class="img-fluid" width="80%">
               <p>A quick, blurry sketch of my Little Prince idea.</p>
             </div>
 
@@ -131,14 +131,14 @@
             <p>The practical limits I had in power to generate waves (which is super hard!), as well as in my knowledge of electronics and fluid dynamics, gradually turned me to a mechanical wave machine. I started experimenting, using servomotors, to drive a wave pattern through the fabric.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/07.jpg" alt="Image" class="img-fluid">
+              <img src="images/fabricwave/07.jpg" alt="Image" class="img-fluid" width="80%">
               <p>The very beginnings of the wave machine.</p>
             </div>
 
             <p>While perhaps not as honest as literal waves in water, creating mechanical waves created new opprotunities and challenges to create an aesthetically pleasing piece to display. After various prototypes and experimentations at smaller scales, I created the final piece using a sheet of the fabric, which was hung from a laser cut piece of wood with piano wire. This form provided new opportunities to view the sculpture from beneath as well as from the side.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/09.jpg" alt="Image" class="img-fluid">
+              <img src="images/fabricwave/09.jpg" alt="Image" class="img-fluid" width="80%">
               <p>The final sculpture on display.</p>
             </div>
 
